# VT1

./: Data_Loader.py  README.md  pyproject.toml
data/: Data_Loader.py
data/processed/: AAPL-baseline_prices.csv  AAPL_1d_prices.csv
data/scripts/: create_training_data.py  download_prices.py
docs/: 00-project-charter.md  01-problem-statement.md  02-research-question.md  03-scope-and-limitations.md  04-requirements.md  04b-requirements-status.md  05-use-cases.md  06-sut-definition.md  07-architecture-options.md  08-evaluation-plan.md  10-literature-map.md  11-glossary.md
experiments/raw/: EXP-LOCAL-REPLAY-001-decisions.jsonl  EXP-WALK-FORWARD-001-predictions.jsonl
harness/replay-orchestrator/: demo-local.py
harness/replay_orchestrator/: demo_event_generator.py  demo_local.py  event_generator.py  replay_events.py  walk_forward_evaluation.py
models/: registry.csv
src/portfolio_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/portfolio_system/adapters/: local_decision_repo.py
src/portfolio_system/core/: decision_logic.py  feature_generation.py  labels.py  price_buffer.py  processing.py  validation.py
src/portfolio_system/domain/: decisions.py  events.py  features.py  model_features.py  price_history.py
src/portfolio_system/ml/: labels.py  (+3 more)
tests/unit/: test_decision_logic.py  test_event_generator.py  test_feature_generation.py  test_price_buffer.py  test_training_data.py  test_validation.py
ui/: app.py  common.py  constants.py
ui/views/: create_dataset.py  experiments.py  home.py  model_registry.py  results.py  train_model.py
