[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-system"
version = "0.1.0"
description = "Prototype cloud-native portfolio decision system"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]